--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <form>
-        <label for="expression">Your expression here:</label><br>
-        <input type="text" id="expression" name="expression">
-        <button type="submit" onclick="render()">Render</button>
-    </form>
-
+    <label for="expression">Your expression here:</label><br><br/>
+    <input type="text" id="expression" name="expression">
+    <button onclick="render()">Render</button>
+    <br/>
+    <br/>
+    <br/>
     <canvas id="diagram" width="750" height="300">
         Too bad U can't render it... Cry about it...
     </canvas>
